Bug 86755. Get rid of nsIRDFContentModelBuilder interface, move methods to nsIXULTemplateBuilder; rename |SetRootContent| to |init|. nsXULOutlinerBuilder now implements |init|, allowing us to initialize it with a database, so that we don't have to wait around until frames get created. r=varga@utcru.sc, sr=hyatt